# llm-playground

./: .gitignore  README.md  pyproject.toml
01-agentic-rag/: .gitignore  agents.ipynb  homework.ipynb  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_cleaned.ipynb  rag_helper.py
01-intro/: README.md  \workspaces\llm-playground\01-intro\homework.ipynb  configuring env.ipynb  homework.ipynb  rag-intro.ipynb
02-vector-search/: README.md  homework.ipynb  hybrid-search.ipynb  rag.ipynb  rag_helper.py  semantic-search.ipynb  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
02-vector-search/homework/: homework.ipynb  pyproject.toml
02-vector-search/qdrant_storage/: raft_state.json
03-evaluation/: README.md  homework.ipynb
03-evaluation/rag_evaluation/: offline-rag-evaluation.ipynb
03-evaluation/search_evaluation/: evaluate-text-qdrant.ipynb  ground-truth-data.csv  ground-truth-data.ipynb
0a-agents/: agents-2.ipynb  chat_assistant.py  chat_assistant_2.py  homework.ipynb  mcp_client.py  notebook.ipynb  readme.md  weather_server.py
dlt-workshop/: README.md  api_spec_ontology.owl  cognee_taxi_dataset_demo.ipynb  filesystem_pipeline.py  homework.ipynb  mount_cognee.py  zoomcamp_pipeline.duckdb
dlt-workshop/db.qdrant/: meta.json
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
search-engine/: notebook.ipynb
search-engine-workshop/: notebook.ipynb
(+57 files in other folders)
