[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.8.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.0",
    "toyaikit>=0.0.11",
]
